manage muliple secrets